...
                    <connections>
                        <action selector="uploadStoredData" destination="-1" eventType="touchUpInside" id="s3d-MM-wGP"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lbN-iG-IEG">
                    <rect key="frame" x="117" y="375" width="179" height="209"/>
                    <state key="normal" title="New student"/>
                    <connections>
                        <action selector="createNewStudent" destination="-1" eventType="touchUpInside" id="8ic-KV-zUL"/>
                    </connections>
                </button>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
